overseerr/seerr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seerr
  namespace: media-services
  labels:
    app.kubernetes.io/name: seerr
  annotations:
    keel.sh/policy: major
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@weekly"    
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seerr
  strategy:
    type: Recreate      
  template:
    metadata:
      labels:
        app: seerr
      annotations:	
        linkerd.io/inject: enabled        
    spec:
      containers:
        - name: seerr
          image: ghcr.io/seerr-team/seerr:latest
          imagePullPolicy: Always
          ports:
            - name: seerr
              containerPort: 5055
          resources:
            limits:
              cpu: 500m
              memory: "536870912"
            requests:
              cpu: 250m
              memory: "134217728"
          volumeMounts:
            -  name: overseerr-volume
               mountPath: /app/config
      volumes:
        - name: overseerr-volume
          persistentVolumeClaim:
            claimName: overseerr-pvc
      restartPolicy: Always
