overseerr/seerr-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr
  namespace: media-services
spec:
  selector:
    app: seerr
  ports:
    - name: seerr
      port: 5055
      targetPort: 5055
