overseerr/seerr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seerr-ingress
  namespace: media-services
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-chain-noauth@kubernetescrd
  #   nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  #   certmanager.k8s.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: traefik
  rules:
    - host: seerr.taius.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seerr
                port:
                  number: 5055
  # tls:
  # - hosts:
  #   - seerr.taius.io
  #   secretName: seerr-tls
